--- a/style.css
+++ b/style.css
@@ -1,5 +1,29 @@
-*{
+body {
+    font-family: sans-serif;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-}
+    line-height: 1.6;
+  }
+
+  header, footer {
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 1em;
+  }
+
+  nav {
+    background-color: #f4f4f4;
+    padding: 0.5em;
+    text-align: center;
+  }
+
+  nav a {
+    margin: 0 1em;
+    text-decoration: none;
+    color: #333;
+  }
+
+  main {
+    padding: 20px;
+  }
